--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_auth: ^0.18.4+1
+  firebase_core:
 
 
   # The following adds the Cupertino Icons font to your application.
